projects/ngx-formentry/src/components/date-time-picker/date-picker/date-picker.component.css
*,
*::before,
*::after {
  box-sizing: border-box; }

.picker-wrap {
  width: 95vw;
  max-width: 666px; }

.picker-box {
  font-family: 'Open Sans';
  width: 100%;
  padding: 0.625rem 1rem;
  user-select: none; }

.picker-header,
.picker-footer {
  font-size: 1.333rem;
  line-height: 2.5rem;
  display: flex;
  height: 2.5rem;
  width: 100%; }

.picker-header-nav {
  position: relative;
  cursor: pointer;
  width: calc(100% / 8); }
  .picker-header-nav > * {
    position: absolute;
    top: 50%;
    right: auto;
    bottom: auto;
    left: 50%;
    transform: translate(-50%, -50%); }
  .picker-header-nav .nav-prev::before,
  .picker-header-nav .nav-next::before {
    content: " ";
    border-top: .5em solid transparent;
    border-bottom: .5em solid transparent;
    border-right: .75em solid #000;
    width: 0;
    height: 0;
    display: block;
    margin: 0 auto; }
  .picker-header-nav .nav-next::before {
    border-right: 0;
    border-left: .75em solid #000; }

.picker-header-content {
  width: calc(100% * 6 / 8);
  text-align: center; }
  .picker-header-content .month {
    font-size: 1.778rem;
    line-height: 2.5rem;
    margin-right: .5rem;
    font-weight: 700; }
  .picker-header-content .year {
    font-style: italic;
    color: #999; }

.picker-calendar {
  width: 100%; }
  .picker-calendar .picker-calendar-row {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    margin-bottom: 0.625rem; }
  .picker-calendar .picker-weekday {
    font-weight: 700;
    text-align: left;
    color: #999;
    width: calc(100% / 7); }
  .picker-calendar .picker-day, .picker-calendar .picker-month, .picker-calendar .picker-year {
    font-size: 1.333rem;
    line-height: 2.5rem;
    position: relative;
    height: 2.5rem;
    text-align: center;
    cursor: pointer;
    width: calc(100% / 7); }
    .picker-calendar .picker-day:hover, .picker-calendar .picker-month:hover, .picker-calendar .picker-year:hover {
      background: #b1dcfb; }
  .picker-calendar .out-focus {
    color: #ddd; }
    .picker-calendar .out-focus:hover {
      color: #000; }
  .picker-calendar .selected {
    background: #0089ec;
    color: #fff; }
    .picker-calendar .selected:hover {
      background: #0089ec; }
  .picker-calendar .today::before {
    content: " ";
    position: absolute;
    top: 2px;
    right: 2px;
    width: 0;
    height: 0;
    border-top: .5em solid #0059bc;
    border-left: .5em solid transparent; }

.picker-footer {
  cursor: pointer; }
  .picker-footer .picker-action {
    text-align: center;
    width: calc(100% / 3); }
    .picker-footer .picker-action:hover {
      background-color: #b1dcfb; }
    .picker-footer .picker-action .text {
      padding-left: .8rem; }
  .picker-footer .action-today::before,
  .picker-footer .action-clear::before,
  .picker-footer .action-close::before {
    content: " ";
    position: relative;
    display: inline-block;
    height: 0;
    width: 0; }
  .picker-footer .action-today::before {
    border-top: .66em solid #0059bc;
    border-left: .66em solid transparent; }
  .picker-footer .action-clear::before {
    top: -.5rem;
    width: 1rem;
    border-top: 3px solid #e20; }
  .picker-footer .action-close::before {
    width: 1rem;
    height: 1rem;
    background: linear-gradient(to bottom, transparent 35%, #777 35%, #777 65%, transparent 65%), linear-gradient(to right, transparent 35%, #777 35%, #777 65%, transparent 65%);
    transform: rotate(45deg); }

